[package]
name = "lenna_cli"
version = "0.1.8"
authors = ["Christian <chriamue@gmail.com>"]
description = "Command line interface to run algorithms on images."
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/lenna-project/lenna-cli"
homepage = "https://lenna.app"
documentation = "https://docs.rs/lenna_cli"
keywords = ["cli", "image-processing"]
categories = ["multimedia::images", "wasm", "graphics"]

[lib]
name = "lenna_cli"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "lenna-cli"
path = "src/bin/bin.rs"
required-features = ["libloading"]

[features]
default = []
python = ["libloading", "lenna_core/python", "ndarray", "nshare", "numpy", "pyo3", "pythonize"]

[dependencies]
libloading = { version = "0.7", optional = true }
structopt = "0.3"
lenna_core = { version = "0.1", git = "https://github.com/lenna-project/lenna-core", branch = "main" }
image = { version = "0.23.14", default-features = false, features = [
    "png",
    "jpeg",
    "ico",
    "gif",
] }
pyo3 = { version = "0.14", features = ["extension-module"], optional = true }
ndarray = { version = "0.15.3", optional = true }
nshare = { version = "0.7.0", features = ["image", "ndarray"], optional = true }
numpy = { version = "0.14.1", optional = true }
pythonize = { version = "0.14.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.17"
zip = { version = "0.5", default-features = false }

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4.23" }
js-sys = "0.3.50"
console_error_panic_hook = "0.1"

[package.metadata.maturin]
classifiers = ["Programming Language :: Python"]
requires-dist = ["numpy"]
