[package]
name = "lenna_cli"
version = "0.3.0"
authors = ["Christian <chriamue@gmail.com>"]
description = "Command line interface to run algorithms on images."
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/lenna-project/lenna-cli"
homepage = "https://lenna.app"
documentation = "https://docs.rs/lenna_cli"
keywords = ["cli", "image-processing"]
categories = ["multimedia::images", "wasm", "graphics"]

[lib]
name = "lenna_cli"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "lenna-cli"
path = "src/bin/bin.rs"
required-features = ["libloading"]

[features]
default = []
python = [
    "libloading",
    "lenna_core/python",
    "ndarray",
    "nshare",
    "numpy",
    "pyo3",
    "pythonize",
]

[dependencies]
libloading = { version = "0.7", optional = true }
structopt = "0.3"
lenna_core = { version = "0.3", git = "https://github.com/lenna-project/lenna-core", branch = "main" }
image = { version = "0.24", default-features = false, features = [
    "png",
    "jpeg",
    "ico",
    "gif",
] }
pyo3 = { version = "0.16", features = ["extension-module"], optional = true }
ndarray = { version = "0.15", optional = true }
nshare = { version = "0.9", features = ["image", "ndarray"], optional = true }
numpy = { version = "0.16", optional = true }
pythonize = { version = "0.16", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4" }
js-sys = "0.3"
console_error_panic_hook = "0.1"

[package.metadata.maturin]
classifiers = ["Programming Language :: Python"]
requires-dist = ["numpy"]
